<resources>
    <string name="app_name">UGD10_E_9590</string>
    <string name="todo">TODO</string>
    <string name="npm">NPM</string>
    <string name="nama">Nama</string>
    <string name="fakultas">Fakultas</string>
    <string name="jurusan">Jurusan</string>
    <string name="ipk">IPK</string>
    <string name="add_mahasiswa">Add Mahasiswa</string>
    <string name="chart_view">Chart View</string>
    <string name="url_photos">Url Photos</string>
    <string name="add">ADD</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="jenis_kelamin">Jenis Kelamin</string>
    <string name="laki_laki">Laki Laki</string>
</resources>