<?xml version="1.0" encoding="utf-8"?>
<com.google.android.material.card.MaterialCardView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_marginLeft="10dp"
    android:layout_marginTop="10dp"
    android:layout_marginRight="10dp"
    app:cardBackgroundColor="#CAADFF"
    app:cardCornerRadius="5dp"
    tools:context=".adapter.MahasiswaRVA">

    <LinearLayout
        android:id="@+id/content"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center_vertical"
        android:orientation="horizontal">

         <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="20dp"
            android:gravity="center"
            android:orientation="vertical">
            <com.github.siyamed.shapeimageview.mask.PorterShapeImageView
                android:id="@+id/ivGambar"
                android:layout_width="125dp"
                android:layout_height="125dp"
                app:siShape="@drawable/vector"
                app:siSquare="true"
                android:contentDescription="@string/todo" />
        </LinearLayout>

        <LinearLayout
            android:paddingVertical="15dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="30dp"
            android:gravity="center_vertical"
            android:orientation="horizontal">
            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:orientation="vertical">
                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/npm"
                    android:textColor="#4E4E4E"
                    android:textSize="12sp" />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/nama"
                    android:textColor="#4E4E4E"
                    android:textSize="12sp" />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/fakultas"
                    android:textColor="#4E4E4E"
                    android:textSize="12sp" />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/jurusan"
                    android:textColor="#4E4E4E"
                    android:textSize="12sp" />

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/ipk"
                        android:textColor="#4E4E4E"
                        android:textSize="12sp" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:orientation="vertical"
                android:layout_marginStart="15dp">
                <TextView
                    android:id="@+id/txtNpm"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textColor="#4E4E4E"
                    android:textSize="12sp"
                    android:textStyle="bold" />

                <TextView
                    android:id="@+id/txtNama"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textColor="#4E4E4E"
                    android:textSize="12sp"
                    android:textStyle="bold" />

                <TextView
                    android:id="@+id/txtFakultas"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textColor="#4E4E4E"
                    android:textSize="12sp"
                    android:textStyle="bold" />

                <TextView
                    android:id="@+id/txtJurusan"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textColor="#4E4E4E"
                    android:textSize="12sp"
                    android:textStyle="bold" />

                <TextView
                    android:id="@+id/txtIpk"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textColor="#4E4E4E"
                    android:textSize="12sp"
                    android:textStyle="bold" />
            </LinearLayout>
        </LinearLayout>
    </LinearLayout>
</com.google.android.material.card.MaterialCardView>